# atlas

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  idea.md  pyproject.toml
.changelog/: 20260312_143000_phases_8_10c.md
agents/batch_processor/: agent.py  agent.yaml
agents/claude-tools/: agent.py  agent.yaml
agents/claude-writer/: agent.py  (+1 more)
atlas/: __init__.py  app_keys.py  constants.py  eval.py  events.py  logging.py  metrics.py  retry.py  serve.py  trace.py  ws.py
chains/: translate-then-format.yaml  write-review-summarize.yaml  write-then-review.yaml
demos/: hardware_aware_pool.py  knowledge_agent.py  multi_agent_pipeline.py  skill_mcp_server.py  triggered_workflow.py
docs/: ARCHITECTURE.md
tests/: conftest.py  test_chain_api.py  test_chains.py  test_cli.py  test_complex_schemas.py  test_container_protocol.py  test_container_slot.py  test_contract.py  test_cron.py  test_dependency_resolver.py  test_dynamic_llm_agent.py  test_e2e_chains.py  test_e2e_eventbus.py  test_e2e_federation.py  test_e2e_hardware.py  test_e2e_knowledge.py  test_e2e_lifecycle.py  test_e2e_mcp.py  test_e2e_orchestrator.py  test_e2e_pool.py  test_e2e_security.py  test_e2e_skills.py  test_e2e_triggers.py  test_eval.py  test_events.py  test_exec_agent.py  test_hardware.py  test_knowledge.py  test_langchain_agent.py  test_live.py  test_live_phase11.py  test_llm_agent.py  test_llm_bridge.py  test_logging.py  test_mcp_client.py  test_mcp_remote_agents.py  test_mcp_server.py  test_mcp_transport.py  test_mediation.py  test_memory.py  (+33 more)
triggers/: cron-echo.yaml  webhook-echo.yaml
(+119 files in other folders)
